Added installation files.
We'll use Autoconf since that's what's used throughout WF, even though
it might seem a little overkill for installing a couple of xml files.
The idea here is that these files should be available for other
components, such as Cyphesis and Ember.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,22 @@
 # Ignore temporary files
 *~
+Makefile.in
+aclocal.m4
+autom4te.cache
+config.guess
+config.h.in
+config.log
+config.sub
+configure
+depcomp
+install-sh
+libtool
+ltmain.sh
+missing
+config.status
+ember
+ember-media.spec
+ember.dox
+ember.spec
+mkinstalldirs
+Makefile
